[package]
name = "labadoor-log"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
config = "0.13.4"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
labadoor-csv = { path = "../labadoor-csv", optional = true }
labadoor-logging = { path = "../labadoor-logging"}

[features]
csv = ["dep:labadoor-csv"]
