[package]
name = "labadoor-matrix"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
matrix-sdk = "0.6.2"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
labadoor-common = { path = "../labadoor-common"}

[target.armv7-unknown-linux-musleabihf.dependencies]
openssl-sys = { version = "0.9.67", features = ["vendored"] }
