[package]
name = "labadoor-telegram"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }

[target.armv7-unknown-linux-musleabihf.dependencies]
openssl-sys = { version = "0.9.67", features = ["vendored"] }
