[package]
name = "labadoor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
labadoor-telegram = { path = "../labadoor-telegram", optional = true }
labadoor-matrix = { path = "../labadoor-matrix", optional = true }
labadoor-csv = { path = "../labadoor-csv", optional = true }
labadoor-gpio = { path = "../labadoor-gpio", optional = true }

[features]
telegram = [ "dep:labadoor-telegram" ]
matrix = [ "dep:labadoor-matrix" ]
csv = [ "dep:labadoor-csv" ]
gpio = [ "dep:labadoor-gpio" ]
