[package]
name = "labadoor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
labadoor-telegram = { path = "../labadoor-telegram", optional = true }
labadoor-matrix = { path = "../labadoor-matrix", optional = true }
labadoor-gpio = { path = "../labadoor-gpio", optional = true }
labadoor-auth = { path = "../labadoor-auth", optional = true }
labadoor-open = { path = "../labadoor-open", optional = true}
labadoor-log = { path = "../labadoor-log", optional = true}
serde = { version = "1.0.164", features = ["derive"] }
config = "0.13.3"
toml = "0.8.8"

[features]
telegram = ["dep:labadoor-telegram"]
matrix = ["dep:labadoor-matrix"]
gpio = ["dep:labadoor-gpio"]
auth = ["dep:labadoor-auth"]
open = ["dep:labadoor-open"]
log = ["dep:labadoor-log"]
